Fixed #3684 - Calendars inline with icons overlapping

--- a/src/app/components/calendar/calendar.css
+++ b/src/app/components/calendar/calendar.css
@@ -4,7 +4,6 @@
 }
 
 .ui-calendar .ui-calendar-button {
-    position: absolute;
     height: 100%;
     border-top-left-radius: 0px;
     border-bottom-left-radius: 0px;
